feat: 테스트를 위한 docker compose 작성

--- a/environments/.env.local
+++ b/environments/.env.local
@@ -7,7 +7,7 @@ SERVICE_PORT=3000
 DATABASE_URL="postgresql://postgres:daphne@localhost:5432/postgres?schema=classting"
 
 # JWT 설정
-JWT_SECRET="YOUR_SECRET_KEY"
+JWT_SECRET="JWT_SECRET"
 JWT_EXPIRE="1h"
 REFRESH_JWT_SECRET="REFRESH_JWT_SECRET"
 REFRESH_JWT_EXPIRE="7d"
